--- a/login.html
+++ b/login.html
@@ -72,7 +72,7 @@
             <button type="submit">로그인</button>
         </p>
         <div>
-            <a href="/join.html">회원가입</a>
+            <a href="./join.html">회원가입</a>
             <a href="#">아이디 찾기</a>
             <a href="#">비밀번호 찾기</a>
         </div>
